syntax = "proto3";
option java_package = "edu.usfca.cs.dfs.controller";

message StorageHearbeat {
    string chunkName = 1;
    string hostName = 2;
    int32 portnum = 3;
    int32 chunkId = 4;
    string controller = 5;
    string heartbeatmsg = 6;
    int64 freespace = 7;
    repeated string fileName = 8;
}

message ControllerMessagePB {
    oneof msg {
        StorageHearbeat storageHeartBeat = 1;
    }


}